[gd_scene load_steps=10 format=3 uid="uid://bl2fdhp0vbrhc"]

[ext_resource type="Script" path="res://Enemies/Slime/slime.gd" id="1_dgs50"]
[ext_resource type="Texture2D" uid="uid://bbbt8w1j0gv77" path="res://Enemies/Slime/DemonSlime.png" id="1_ecg2e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65mx2"]
size = Vector2(13, 8)

[sub_resource type="Animation" id="Animation_c7klr"]
resource_name = "Dead"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_xjpv4"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_5wjya"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sdjs7"]
_data = {
"Dead": SubResource("Animation_c7klr"),
"Idle": SubResource("Animation_xjpv4"),
"RESET": SubResource("Animation_5wjya")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_li502"]
size = Vector2(15, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_l4t6d"]
radius = 32.0156

[node name="Slime" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_dgs50")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 12)
shape = SubResource("RectangleShape2D_65mx2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ecg2e")
hframes = 4
vframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sdjs7")
}

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, 11.5)
shape = SubResource("RectangleShape2D_li502")
debug_color = Color(0.956863, 0, 0.533333, 0.419608)

[node name="VisionBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionBox" groups=["enemies"]]
shape = SubResource("CircleShape2D_l4t6d")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="VisionBox" to="." method="_on_vision_box_body_entered"]
[connection signal="body_exited" from="VisionBox" to="." method="_on_vision_box_body_exited"]
